force-app/main/default/objects/BoatReview__c/BoatReview__c.object-meta.xml
<CustomObject>
    <label>BoatReview</label>
    <nameField>
        <label>BoatReview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boat Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>