force-app/main/default/objects/BoatReview__c/fields/Boat__c.field-meta.xml
<CustomField>
    <fullName>Boat__c</fullName>
    <label>Boat</label>
    <referenceTo>Boat__c</referenceTo>
    <relationshipLabel>Boat Reviews</relationshipLabel>
    <relationshipName>Boat_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>